# athena

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTIC_IMPLEMENTATION_INDEX.md  AGENTIC_PATTERNS.md  AGENT_DELEGATION_STRATEGY.md  AGENT_DISCOVERY_QUICK_START.md  AGENT_GUIDE.md  AGENT_IMPLEMENTATION_GUIDE.md  ALIGNMENT_SUMMARY.md  ANALYSIS_INDEX.md  ANTHROPIC_MCP_ALIGNMENT_ANALYSIS.md  ANTHROPIC_MCP_ALIGNMENT_VERIFICATION.md  ANTHROPIC_MCP_ALIGNMENT_VERIFIED.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_INDEX.md  ARCHITECTURE_ANALYSIS_SUMMARY.txt  ARCHITECTURE_COMPLETE_OVERVIEW.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_README.md  ARCHITECTURE_SUMMARY.txt  ARCHITECTURE_VISUAL_GUIDE.txt  ASYNC_SYNC_ANALYSIS.md  ASYNC_SYNC_FINDINGS.md  ATHENA_FEATURES_AND_RESEARCH.md  ATHENA_INTEGRATION_STRATEGY.md  ATHENA_MCP_INTEGRATION_STATUS.md  ATHENA_MCP_STANDARDS_ANALYSIS.md  AUDIT_REPORT.md  BACKEND_API_COMPLETE.md  BACKEND_API_INTEGRATION_STATUS.md  CASCADING_RECALL_ANALYSIS.md  CHAOS_TESTING.md  CLAUDE.md  CLAUDE_ALIGNMENT_STATUS.md  CLAUDE_CODE_HOOKS_RESEARCH.md  CLAUDE_CODE_HOOKS_SUMMARY.md  CLAUDE_CODE_QUICK_START.md  COMMAND_ANALYSIS_INDEX.md  (+272 more)
athena_dashboard/: .env.example  README.md  create_completion_plan.py  create_dashboard_plan.py  create_plan.py  docker-compose.yml
benchmarks/: __init__.py  benchmark_memory_ranking.py  episodic_benchmark.py  example_queries.json  phase2_production_validation.py  phase2_results_analysis.py
claude/: CLAUDE.md  FILESYSTEM_API_ALIGNMENT_PLAN.md  statusline-athena.sh
config/: local.json
dashboard/: DEPLOYMENT_GUIDE.md  FEATURE_COVERAGE.md  PULL_REQUEST_SUMMARY.md  README.md
docker/: Dockerfile  docker-compose.yml  llamacpp_server.py  start_services.sh
docs/: ACTUAL_IMPLEMENTATION_STATUS.md  AGENTS.md  AGENTS_COMMANDS_SKILLS_GUIDE.md  AGENTS_REFACTOR.md  AGENT_COORDINATION.md  AGENT_DISCOVERABILITY.md  AGENT_SYSTEMS_EXPLAINED.md  ANALYSIS_INDEX.md  ANALYSIS_RAG_IS_DEAD.md  ANTHROPIC_AGENT_SDK_INTEGRATION.md  ANTHROPIC_ALIGNMENT.md  ANTHROPIC_PATTERN_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FITNESS_FUNCTIONS.md  ARCHITECTURE_IMPACT_ANALYSIS.md  ARCHITECTURE_PR_REVIEW_BOT.md  ATHENA_QUICK_REFERENCE.md  ATHENA_USAGE_ANALYSIS.md  BACKEND_SETUP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_HOOKS_RESEARCH.md  CODE_ANALYSIS_MEMORY_TESTING.md  CODE_ANALYZER_MEMORY_INTEGRATION.md  CODE_EXECUTION_PATTERN.md  COMMAND_AGENT_SKILL_DESIGN.md  CONFIGURATION.md  CONSCIOUSNESS_METRICS.md  CONTRIBUTING.md  CURRENT_SESSION_STATUS.md  CURSOR_MANAGEMENT.md  DASHBOARD_COMPLETE_SYSTEM_DESIGN.md  DASHBOARD_DEPLOYMENT_SYSTEMD.md  DASHBOARD_DESIGN_ANALYSIS.md  DASHBOARD_TECH_STACK_2025.md  (+87 more)
(+2333 files in other folders)
