[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.9.0"
description = "8-layer neuroscience-inspired memory system for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Athena Contributors", email = "dev@athena.local"}
]

dependencies = [
    "anthropic>=0.7.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "sqlite-vec>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "mcp>=1.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.24",
    "ollama>=0.1.0",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
    "pyyaml>=6.0",
    "psutil>=5.0.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=5.0",
]

[project.scripts]
memory-mcp = "athena.cli:main"
athena-server = "athena.server:main"
athena-http = "athena.http.server:main"

[tool.setuptools]
packages = ["athena"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

markers = [
    "unit: unit tests (fast, isolated)",
    "integration: integration tests (slower, cross-layer)",
    "benchmark: performance benchmark tests (very slow)",
    "performance: performance tests (profiling, load testing, chaos)",
    "slow: slow tests to skip in CI",
    "llm: tests requiring LLM services",
    "smoke: smoke tests for quick validation",
    "regression: regression test suite",
    "phase7bc: Phase 7bc specific tests",
    "phase7: Phase 7 related tests",
]
